--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 </head>
 
-<body>
+<body onload="onLoad()">
     <nav class="navbar sticky-top bg-body-tertiary">
         <div class="container-fluid  nav-title-margin-c">
             <a class="navbar-brand quick-whether" href="#">QuickWeather</a>
-            <img class="earth" src="C:\Users\ramin\Pictures\Saved Pictures\APznzab-yZJrgHYbsJGBlZDWgbgg6j6S80iY6UKr5DQg7VNfsHpnz07URgc_hE1v0C83mWtBWxLJ1lhhYBnXD7_2qLY1qDj9JMmWn50kgDR2lRsqH7q7yaj17Kh02aY_RrzD-ysViEW42xtjSWQEQHNCFF5OmREz1f9qr08iO3a3uTT2j6j8ElDQ-JL7EnwpumMYpHXs.pdf">
+
             <div class="row">
                 <div class="col-auto btn-group">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
@@ -23,9 +25,9 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
 
-                        <li><button id="btnDark" class="dropdown-item" type="button"  >Dark</button></li>
-                        <li><button id="btnLight" class="dropdown-item" type="button" >Light</button></li>
-                        
+                        <li><button id="btnDark" class="dropdown-item" type="button">Dark</button></li>
+                        <li><button id="btnLight" class="dropdown-item" type="button">Light</button></li>
+
                     </ul>
                 </div>
                 <div class="col-auto btn-group">
@@ -43,9 +45,9 @@
     </nav>
     <div class="container mt-2">
         <div class="mb-3 row card-margin-c">
-            <input type="text" class="col-md-9" placeholder="Search a city" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary col-md-3" type="button" id="button-addon2">Search</button>
+            <input id="searchField" type="text" class="col-md-9">
+            <button class="btn btn-outline-secondary col-md-3" type="button" id="button-addon2"
+                onclick="searchBtnOnclick()">Search</button>
         </div>
         <ul class="nav nav-tabs card-margin-c" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -71,54 +73,54 @@
                     <div class="row p-3">
                         <div class="col-md-5 row">
                             <div class="col-md-6">
-                                <img class="icon" src="//cdn.weatherapi.com/weather/128x128/night/116.png">
+                                <img class="icon" src="//cdn.weatherapi.com/weather/128x128/night/116.png"
+                                    id="crntImage" width="100%">
                             </div>
                             <div class="col-md-6 row ml-2">
-                                <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                <p class="temp-display"><span class="temp" id="crntTemperature">27</span>
+                                    <sup><span>o</span></sup><span class="c_icon">C</span>
+                                </p>
                             </div>
-                            <h6 class="card-title">Thunderstorm</h6>
-                            <p class="card-text">Thundery showers over many areas in the late morning and early
-                                afternoon.</p>
+                            <h6 class="card-title" id="crntCondition">Thunderstorm</h6>
+
                         </div>
                         <div class="col-md-7">
                             <div class="card-body">
                                 <table class="box" width="100%">
                                     <tr>
                                         <td>Humidity</td>
-                                        <td>94%</td>
+                                        <td id="crntWeatherHumidity">94%</td>
                                     </tr>
                                     <tr>
                                         <td>Wind Speed</td>
-                                        <td>6 km/h</td>
+                                        <td id="crntWindSpeed">6 km/h</td>
                                     </tr>
                                     <tr>
                                         <td>Pressure</td>
-                                        <td>1011 mb</td>
+                                        <td id="crntPressure">1011 mb</td>
                                     </tr>
                                     <tr>
-                                        <td>Dew Point</td>
-                                        <td>24<span class="wob_t" style="display:inline" aria-label="°Celsius"
-                                                aria-disabled="true" role="button">°C</span></td>
+                                        <td>Feels Like</td>
+                                        <td id="crntFeelsLike">24<span class="wob_t" style="display:inline"
+                                                aria-label="°Celsius" aria-disabled="true" role="button">°C</span></td>
                                     </tr>
                                     <tr>
                                         <td>Cloud Cover</td>
-                                        <td>70%</td>
+                                        <td id="crntCloudCover">70%</td>
                                     </tr>
                                     <tr>
                                         <td>Visibility</td>
-                                        <td>16 km</td>
+                                        <td id="crntVisibility">16 km</td>
                                     </tr>
                                     <tr>
-                                        <td>Cloud Ceiling</td>
-                                        <td>7500m</td>
+                                        <td>Precipitation</td>
+                                        <td id="crntPrecipitation">7500m</td>
                                     </tr>
 
                                 </table>
                             </div>
 
 
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
@@ -134,7 +136,8 @@
                             </div>
                             <div class="col-md-6 row ml-2">
                                 <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                    <sup><span>o</span></sup><span>C</span>
+                                </p>
                             </div>
                             <h6 class="card-title">Thunderstorm</h6>
                             <p class="card-text">Thundery showers over many areas in the late morning and early
@@ -180,7 +183,8 @@
                             </div>
                             <div class="col-md-6 row ml-2">
                                 <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                    <sup><span>o</span></sup><span>C</span>
+                                </p>
                             </div>
                             <h6 class="card-title">Thunderstorm</h6>
                             <p class="card-text">Thundery showers over many areas in the late morning and early
@@ -229,7 +233,8 @@
                             </div>
                             <div class="col-md-6 row ml-2">
                                 <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                    <sup><span>o</span></sup><span>C</span>
+                                </p>
                             </div>
                             <h6 class="card-title">Thunderstorm</h6>
                             <p class="card-text">Thundery showers over many areas in the late morning and early
@@ -280,7 +285,8 @@
                             </div>
                             <div class="col-md-6 row ml-2">
                                 <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                    <sup><span>o</span></sup><span>C</span>
+                                </p>
                             </div>
                             <h6 class="card-title">Thunderstorm</h6>
                             <p class="card-text">Thundery showers over many areas in the late morning and early
@@ -327,7 +333,8 @@
                             </div>
                             <div class="col-md-6 row ml-2">
                                 <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                    <sup><span>o</span></sup><span>C</span>
+                                </p>
                             </div>
                             <h6 class="card-title">Thunderstorm</h6>
                             <p class="card-text">Thundery showers over many areas in the late morning and early
@@ -375,7 +382,8 @@
                             </div>
                             <div class="col-md-6 row ml-2">
                                 <p class="temp-display">27
-                                    <sup><span>o</span></sup><span>C</span></p>
+                                    <sup><span>o</span></sup><span>C</span>
+                                </p>
                             </div>
                             <h6 class="card-title">Thunderstorm</h6>
                             <p class="card-text">Thundery showers over many areas in the late morning and early
@@ -413,8 +421,20 @@
                     </div>
 
                 </div>
+
+                <div id="map" class="card mt-3"></div>
             </div>
 
+
+
+
+            <script src="https://code.jquery.com/jquery-3.7.1.js"
+                integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+
+            <!-- Make sure you put this AFTER Leaflet's CSS -->
+            <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+                integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
 
 
